Fix spacing in table

--- a/css/custom.css
+++ b/css/custom.css
@@ -71,6 +71,11 @@ hr {
   background-color: #32cdcd;
 }
 
-.th {
+#mentor-table th {
   word-wrap: break-word;
+}
+
+#mentor-table td {
+  text-align: left;
+  vertical-align:middle;
 }
